// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Breadcrumbs 1`] = `
<div
  className="flex items-center py-4 overflow-y-auto whitespace-nowrap w-11/12 md:w-8/12 mx-auto md:text"
>
  <a
    className="text-gray-600 dark:text-gray-200 cursor-pointer"
    onClick={[Function]}
  >
    <svg
      className="w-5 h-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
      />
    </svg>
  </a>
</div>
`;

exports[`Extended Breadcrumbs 1`] = `
<div
  className="flex items-center py-4 overflow-y-auto whitespace-nowrap w-11/12 md:w-8/12 mx-auto md:text"
>
  <a
    className="text-gray-600 dark:text-gray-200 cursor-pointer"
    onClick={[Function]}
  >
    <svg
      className="w-5 h-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
      />
    </svg>
  </a>
  <span
    className="mx-5 text-gray-500 dark:text-gray-300"
  >
    <svg
      className="w-5 h-5"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <a
    className="text-gray-600 dark:text-gray-200 cursor-pointer hover:underline"
    onClick={[Function]}
  >
    Extended
  </a>
</div>
`;
